Added support for Youtube/NND accounts, reworked ownerid to use longs rather than strings, added the option to disable chat commands, more general improvements